[package]
edition = "2021"
name = "discord-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi6", "chrono_date", "async"] }
napi-derive = "2.12.2"
tungstenite = { version = "0.19.0", features = ["rustls"] }
chrono = "0.4.24"
url = "2.3.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
